[gd_scene load_steps=34 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Girls/angel.png" type="Texture" id=2]
[ext_resource path="res://BG/BG Bambooforest.png" type="Texture" id=3]
[ext_resource path="res://LemonMilkBold-gx2B3.otf" type="DynamicFontData" id=4]
[ext_resource path="res://dissolve.shader" type="Shader" id=5]
[ext_resource path="res://Particles/circle_05.png" type="Texture" id=6]
[ext_resource path="res://Particles/Darkness3.png" type="Texture" id=7]

[sub_resource type="OpenSimplexNoise" id=1]
octaves = 5
period = 32.0
persistence = 0.0

[sub_resource type="NoiseTexture" id=2]
width = 1024
height = 600
seamless = true
noise = SubResource( 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 5 )
shader_param/burn_color = Color( 0, 0, 0, 1 )
shader_param/burn_size = 0.0
shader_param/dissolve_amount = 0.0
shader_param/emission_amount = 0.0
shader_param/dissolve_texture = SubResource( 2 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 384, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 576, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 768, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 0, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 7 )
region = Rect2( 192, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 384, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 7 )
region = Rect2( 576, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 7 )
region = Rect2( 768, 192, 192, 192 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ), SubResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.109065, 0.232295, 0.36119, 0.488669, 0.623229 )
colors = PoolColorArray( 1, 0, 0, 1, 0.992188, 1, 0, 1, 0.0234375, 1, 0.0386963, 1, 0.03125, 0, 1, 1, 1, 0, 0.984375, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 1, 0 )
initial_velocity = 512.0
initial_velocity_random = 0.5
orbit_velocity = 0.5
orbit_velocity_random = 0.05
radial_accel = 10.0
radial_accel_random = 1.0
tangential_accel = 1000.0
tangential_accel_random = 0.5
damping = 150.0
damping_random = 1.0
angle_random = 1.0
scale = 0.1
scale_random = 0.52
color_ramp = SubResource( 5 )
hue_variation = 0.2
hue_variation_random = 1.0

[sub_resource type="DynamicFont" id=7]
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

const float SAMPLES = 71.0;
const float PI2 = 6.283185307179586476925286766559;

uniform vec2 blur_scale = vec2(1, 0);

float gaussian(float x) {
	float x_squared = x*x;
	float width = 1.0 / sqrt(PI2 * SAMPLES);

	return width * exp((x_squared / (2.0 * SAMPLES)) * -1.0);
}

void fragment() {
	vec2 scale = TEXTURE_PIXEL_SIZE * blur_scale;
	
	float weight = 0.0;
	float total_weight = 0.0;
	vec4 color = vec4(0.0);
	
	for(int i=-int(SAMPLES)/2; i < int(SAMPLES)/2; ++i) {
		weight = gaussian(float(i));
		color += texture(TEXTURE, UV + scale * vec2(float(i))) * weight;
		total_weight += weight;
	}
	
	COLOR = color / total_weight;
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/blur_scale = Vector2( 1, 1 )

[sub_resource type="DynamicFont" id=11]
size = 24
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=12]
default_font = SubResource( 11 )

[sub_resource type="Animation" id=24]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=26]
resource_name = "capture"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1 ),
"transitions": PoolRealArray( -0.5, -2, -0.5, 2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 1 ), Vector2( 0.5, 0.5 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "shake"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 106.331, 127.769 ), Vector2( 100, 127.769 ), Vector2( 112, 127.769 ), Vector2( 106, 127.769 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="AutoClickTimer" type="Timer" parent="."]
autostart = true

[node name="Background" type="TextureRect" parent="."]
margin_right = 1022.0
margin_bottom = 598.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocationMask" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
material = SubResource( 3 )
margin_left = -12.0
margin_top = -16.0
margin_right = 1037.0
margin_bottom = 612.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portal" type="AnimatedSprite" parent="."]
position = Vector2( 715.008, 280.616 )
frames = SubResource( 23 )
frame = 12
playing = true

[node name="Summoning" type="Particles2D" parent="."]
position = Vector2( 716.235, 280.875 )
emitting = false
amount = 300
lifetime = 6.0
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 6 )
texture = ExtResource( 6 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -25.0
margin_top = -48.0
margin_right = 429.0
margin_bottom = 640.0
color = Color( 0, 0, 0, 0.478431 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
margin_left = 25.6116
margin_top = 19.0553
margin_right = 311.612
margin_bottom = 580.055
theme = SubResource( 8 )
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Things" type="HBoxContainer" parent="Container"]
margin_right = 752.0
margin_bottom = 22.0

[node name="ThingLabel" type="Label" parent="Container/Things"]
margin_right = 77.0
margin_bottom = 22.0
text = "Energy:"

[node name="ThingAmt" type="Label" parent="Container/Things"]
margin_left = 81.0
margin_right = 93.0
margin_bottom = 22.0
text = "0"

[node name="PerSec" type="HBoxContainer" parent="Container"]
margin_top = 37.0
margin_right = 752.0
margin_bottom = 59.0

[node name="CPSLabel" type="Label" parent="Container/PerSec"]
margin_right = 193.0
margin_bottom = 22.0
text = "Energy per second:"

[node name="CPSAmt" type="Label" parent="Container/PerSec"]
margin_left = 197.0
margin_right = 209.0
margin_bottom = 22.0
text = "0"

[node name="SummonProg" type="HBoxContainer" parent="Container"]
margin_top = 74.0
margin_right = 752.0
margin_bottom = 96.0

[node name="SummonProgLabel" type="Label" parent="Container/SummonProg"]
margin_right = 188.0
margin_bottom = 22.0
text = "Summon Progress:"

[node name="SummonProgAmtContainer" type="HBoxContainer" parent="Container/SummonProg"]
margin_left = 192.0
margin_right = 242.0
margin_bottom = 22.0

[node name="SummonProgAmt" type="Label" parent="Container/SummonProg/SummonProgAmtContainer"]
margin_right = 50.0
margin_bottom = 22.0
text = "0/100"

[node name="RevealProg" type="HBoxContainer" parent="Container"]
margin_top = 111.0
margin_right = 752.0
margin_bottom = 133.0

[node name="RevealProgLabel" type="Label" parent="Container/RevealProg"]
margin_right = 175.0
margin_bottom = 22.0
text = "Reveal progress:"

[node name="RevealProgAmt" type="Label" parent="Container/RevealProg"]
margin_left = 179.0
margin_right = 229.0
margin_bottom = 22.0
text = "0/100"

[node name="CaptureProg" type="HBoxContainer" parent="Container"]
margin_top = 148.0
margin_right = 752.0
margin_bottom = 170.0

[node name="CaptureProgLabel" type="Label" parent="Container/CaptureProg"]
margin_right = 187.0
margin_bottom = 22.0
text = "Capture Progress:"

[node name="CaptureProgAmt" type="Label" parent="Container/CaptureProg"]
margin_left = 191.0
margin_right = 241.0
margin_bottom = 22.0
text = "0/100"

[node name="LocationProgress" type="HBoxContainer" parent="Container"]
margin_top = 185.0
margin_right = 752.0
margin_bottom = 207.0

[node name="LocationProgLabel" type="Label" parent="Container/LocationProgress"]
margin_right = 201.0
margin_bottom = 22.0
text = "Location Progress:"

[node name="LocationProgAmt" type="Label" parent="Container/LocationProgress"]
margin_left = 205.0
margin_right = 259.0
margin_bottom = 22.0
text = "0/250"

[node name="Clicker" type="Button" parent="Container"]
margin_top = 222.0
margin_right = 128.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 38 )
size_flags_horizontal = 0
text = "Add Energy"

[node name="AutoClick" type="HBoxContainer" parent="Container"]
margin_top = 275.0
margin_right = 752.0
margin_bottom = 303.0

[node name="AutoClickButton" type="Button" parent="Container/AutoClick"]
margin_right = 131.0
margin_bottom = 28.0
text = "Auto Click+"

[node name="AutoClickPrice" type="Label" parent="Container/AutoClick"]
margin_left = 135.0
margin_top = 3.0
margin_right = 153.0
margin_bottom = 25.0
text = "10"

[node name="AutoClickLabel" type="Label" parent="Container/AutoClick"]
margin_left = 157.0
margin_top = 3.0
margin_right = 228.0
margin_bottom = 25.0
text = "Energy"

[node name="AutoClickPower" type="HBoxContainer" parent="Container"]
margin_top = 318.0
margin_right = 752.0
margin_bottom = 346.0

[node name="AutoClickPowerButton" type="Button" parent="Container/AutoClickPower"]
margin_right = 200.0
margin_bottom = 28.0
text = "Auto Click Power+"

[node name="AutoClickPowerPrice" type="Label" parent="Container/AutoClickPower"]
margin_left = 204.0
margin_top = 3.0
margin_right = 222.0
margin_bottom = 25.0
text = "10"

[node name="AutoClickPowerLabel" type="Label" parent="Container/AutoClickPower"]
margin_left = 226.0
margin_top = 3.0
margin_right = 297.0
margin_bottom = 25.0
text = "Energy"

[node name="ClickPower" type="HBoxContainer" parent="Container"]
margin_top = 361.0
margin_right = 752.0
margin_bottom = 389.0

[node name="ClickPowerButton" type="Button" parent="Container/ClickPower"]
margin_right = 144.0
margin_bottom = 28.0
text = "Click Power+"

[node name="ClickPowerPrice" type="Label" parent="Container/ClickPower"]
margin_left = 148.0
margin_top = 3.0
margin_right = 166.0
margin_bottom = 25.0
text = "10"

[node name="ClickPowerLabel" type="Label" parent="Container/ClickPower"]
margin_left = 170.0
margin_top = 3.0
margin_right = 241.0
margin_bottom = 25.0
text = "Energy"

[node name="Summon" type="HBoxContainer" parent="Container"]
margin_top = 404.0
margin_right = 752.0
margin_bottom = 432.0

[node name="SummonButton" type="Button" parent="Container/Summon"]
margin_right = 94.0
margin_bottom = 28.0
text = "Summon"

[node name="SummonPrice" type="Label" parent="Container/Summon"]
margin_left = 98.0
margin_top = 3.0
margin_right = 116.0
margin_bottom = 25.0
text = "10"

[node name="SummonLabel" type="Label" parent="Container/Summon"]
margin_left = 120.0
margin_top = 3.0
margin_right = 191.0
margin_bottom = 25.0
text = "Energy"

[node name="SummonPower" type="HBoxContainer" parent="Container"]
margin_top = 447.0
margin_right = 752.0
margin_bottom = 475.0

[node name="SummonPowerButton" type="Button" parent="Container/SummonPower"]
margin_right = 174.0
margin_bottom = 28.0
text = "Summon Power+"

[node name="SummonPowerPrice" type="Label" parent="Container/SummonPower"]
margin_left = 178.0
margin_top = 3.0
margin_right = 196.0
margin_bottom = 25.0
text = "10"

[node name="SummonPowerLabel" type="Label" parent="Container/SummonPower"]
margin_left = 200.0
margin_top = 3.0
margin_right = 271.0
margin_bottom = 25.0
text = "Energy"

[node name="Reveal" type="HBoxContainer" parent="Container"]
margin_top = 490.0
margin_right = 752.0
margin_bottom = 518.0

[node name="RevealButton" type="Button" parent="Container/Reveal"]
margin_right = 81.0
margin_bottom = 28.0
text = "Reveal"

[node name="RevealPrice" type="Label" parent="Container/Reveal"]
margin_left = 85.0
margin_top = 3.0
margin_right = 103.0
margin_bottom = 25.0
text = "10"

[node name="RevealLabel" type="Label" parent="Container/Reveal"]
margin_left = 107.0
margin_top = 3.0
margin_right = 178.0
margin_bottom = 25.0
text = "Energy"

[node name="Capture" type="HBoxContainer" parent="Container"]
margin_top = 533.0
margin_right = 752.0
margin_bottom = 561.0

[node name="CaptureButton" type="Button" parent="Container/Capture"]
margin_right = 93.0
margin_bottom = 28.0
text = "Capture"

[node name="CapturePrice" type="Label" parent="Container/Capture"]
margin_left = 97.0
margin_top = 3.0
margin_right = 115.0
margin_bottom = 25.0
text = "10"

[node name="CaptureLabel" type="Label" parent="Container/Capture"]
margin_left = 119.0
margin_top = 3.0
margin_right = 190.0
margin_bottom = 25.0
text = "Energy"

[node name="Girl" type="Node2D" parent="."]
position = Vector2( 626.181, 173.869 )

[node name="Sprite" type="Sprite" parent="Girl"]
modulate = Color( 0, 0, 0, 1 )
material = SubResource( 10 )
position = Vector2( 106.331, 127.769 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )
region_rect = Rect2( 1119, 1680, 1113, 1280 )

[node name="Name" type="Label" parent="Girl"]
margin_left = -54.3028
margin_top = 372.052
margin_right = 229.697
margin_bottom = 404.052
theme = SubResource( 12 )
text = "MONSTER GIRL NAME"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Girl"]
anims/appear = SubResource( 24 )
anims/capture = SubResource( 26 )
anims/shake = SubResource( 25 )
[connection signal="timeout" from="AutoClickTimer" to="." method="_on_AutoClickTimer_timeout"]
[connection signal="pressed" from="Container/Clicker" to="." method="_on_Clicker_pressed"]
[connection signal="pressed" from="Container/AutoClick/AutoClickButton" to="." method="_on_AutoClickButton_pressed"]
[connection signal="pressed" from="Container/AutoClickPower/AutoClickPowerButton" to="." method="_on_AutoClickPowerButton_pressed"]
[connection signal="pressed" from="Container/ClickPower/ClickPowerButton" to="." method="_on_ClickPowerButton_pressed"]
[connection signal="pressed" from="Container/Summon/SummonButton" to="." method="_on_SummonButton_pressed"]
[connection signal="pressed" from="Container/SummonPower/SummonPowerButton" to="." method="_on_SummonPowerButton_pressed"]
[connection signal="pressed" from="Container/Reveal/RevealButton" to="." method="_on_RevealButton_pressed"]
[connection signal="pressed" from="Container/Capture/CaptureButton" to="." method="_on_CaptureButton_pressed"]
